cluster/manifests/oauth2-proxy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    name: oauth2-proxy
    pod-security.kubernetes.io/enforce: restricted
