cluster/manifests/oauth2-proxy/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: oauth2-proxy
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - oauth2-proxy.minikube.127.0.0.1.nip.io
      port:
        number: 80
        name: http
        protocol: HTTP
